--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </div>
 
     <div class="links">
-      <a class="link-row" href="https://www.youtube.com/@yourchannel1" target="_blank"><span class="link-label">[YT]</span><span class="link-text">YouTube</span></a>
-      <a class="link-row" href="https://vsco.co/yourusername/gallery" target="_blank"><span class="link-label">[VSCO]</span><span class="link-text">VSCO</span></a>
-      <a class="link-row" href="https://github.com/yourusername" target="_blank"><span class="link-label">[GH]</span><span class="link-text">GitHub</span></a>
-      <a class="link-row" href="https://www.printables.com/@yourusername" target="_blank"><span class="link-label">[CAD]</span><span class="link-text">Printables</span></a>
-      <a class="link-row" href="mailto:your@email.com"><span class="link-label">[MAIL]</span><span class="link-text">Email</span></a>
-      <a class="link-row" href="https://t.me/yourtelegram" target="_blank"><span class="link-label">[TG]</span><span class="link-text">Telegram</span></a>
+      <a class="link-row" href="https://www.youtube.com/@LuigiToby" target="_blank"><span class="link-label">[YT]</span><span class="link-text">YouTube</span></a>
+      <a class="link-row" href="https://vsco.co/luigitoby/gallery" target="_blank"><span class="link-label">[VSCO]</span><span class="link-text">VSCO</span></a>
+      <a class="link-row" href="https://github.com/luigitoby" target="_blank"><span class="link-label">[GH]</span><span class="link-text">GitHub</span></a>
+      <a class="link-row" href="https://www.printables.com/@LuigiToby_3409476" target="_blank"><span class="link-label">[CAD]</span><span class="link-text">Printables</span></a>
+      <a class="link-row" href="mailto:alejandro.rodriguez3386@gmail.com"><span class="link-label">[MAIL]</span><span class="link-text">Email</span></a>
+      <a class="link-row" href="https://t.me/LuigiToby" target="_blank"><span class="link-label">[TG]</span><span class="link-text">Telegram</span></a>
     </div>
 
     <div class="downloads">
