--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <pre id="ascii-stars"></pre>
-
   <div class="card">
     <img src="assets/profile.jpg" alt="Luigi" class="profile" />
     <h1 id="typewriter">Luis Alejandro Rodríguez Arenas</h1>
     <p class="subtitle">AKA: Luigi, LuigiToby, Luis</p>
-    <p class="subtitle">Mechanical Engineering Student | Computer Science Minor</p>
+    <p class="subtitle">Mechanical Engineering Major | Computational Mathematics Minor</p>
 
     <div class="bio">
-      <p>I'm a mechanical engineering student from Bogotá, Colombia, with a strong interest in the aerospace sector, my north star, as I explore the intersections of engineering, design, and technology. While aerospace continues to inspire my direction, I approach my career with a lifestyle-centric mindset, seeking opportunities that align with curiosity, creativity, and meaningful impact.</p>
+      <p>Luis Alejandro Rodríguez Arenas is an undergraduate Mechanical Engineering student at the Universidad de los Andes in Bogotá, Colombia, currently in his fifth semester, with a minor in Computational Mathematics. His academic interests include mechanical design, additive manufacturing, embedded systems, and electromechanical control, with a growing focus on aerospace applications. Luis is currently working with the university’s SpaceTech initiative, specifically in the rocketry subdivision, where he is contributing to the development of a sounding rocket prototype using carbon fiber-reinforced polymers. He is particularly interested in how engineering tools and systems can support lifestyle-driven career paths, with long-term aspirations toward working in the aerospace sector or related fields.</p>
     </div>
 
     <div class="links">
