--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
       </p>
     </div>
 
+    <div class="downloads">
+      <h2 id="downloads-text">Download CVs:</h2>
+      <a class="link-row" href="assets\CV\CV_EN.pdf" download><span class="link-label">[EN]</span><span class="link-text"> CV - English</span></a>
+      <a class="link-row" href="assets\CV\CV_ES.pdf" download><span class="link-label">[ES]</span><span class="link-text"> CV - Español</span></a>
+      <a class="link-row" href="assets\CV\CV_FR.pdf" download><span class="link-label">[FR]</span><span class="link-text"> CV - Français</span></a>
+    </div>
+    
     <div class="links">
+      <h2>Links:</h2>
       <a class="link-row" href="https://www.youtube.com/@LuigiToby" target="_blank"><span class="link-label">[YT]</span><span class="link-text">YouTube</span></a>
       <a class="link-row" href="https://vsco.co/luigitoby/gallery" target="_blank"><span class="link-label">[VSCO]</span><span class="link-text">VSCO</span></a>
       <a class="link-row" href="https://github.com/luigitoby" target="_blank"><span class="link-label">[GH]</span><span class="link-text">GitHub</span></a>
@@ -34,12 +42,7 @@
       <a class="link-row" href="https://t.me/LuigiToby" target="_blank"><span class="link-label">[TG]</span><span class="link-text">Telegram</span></a>
     </div>
 
-    <div class="downloads">
-      <h2 id="downloads-text">Download CVs:</h2>
-      <a class="link-row" href="assets/CV_en.pdf" download><span class="link-label">[EN]</span><span class="link-text"> CV - English</span></a>
-      <a class="link-row" href="assets/CV_es.pdf" download><span class="link-label">[ES]</span><span class="link-text"> CV - Español</span></a>
-      <a class="link-row" href="assets/CV_fr.pdf" download><span class="link-label">[FR]</span><span class="link-text"> CV - Français</span></a>
-    </div>
+
   </div>
 
 <script>
