--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     
     <div class="links">
       <h2>Links:</h2>
+      <a class="link-row" href="https://www.linkedin.com/in/luisarodriguezarenas/" target="_blank"><span class="link-label">[LI]</span><span class="link-text">LinkedIn</span></a>
       <a class="link-row" href="https://www.youtube.com/@LuigiToby" target="_blank"><span class="link-label">[YT]</span><span class="link-text">YouTube</span></a>
       <a class="link-row" href="https://vsco.co/luigitoby/gallery" target="_blank"><span class="link-label">[VSCO]</span><span class="link-text">VSCO</span></a>
       <a class="link-row" href="https://github.com/luigitoby" target="_blank"><span class="link-label">[GH]</span><span class="link-text">GitHub</span></a>
